--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,49 +2,65 @@
 
 .App {
   font-family: 'Noto Sans KR', sans-serif;
-   
+  width: 1500px;
+  margin: 20px auto 0;
 }
+
 .App-title{
   color: #cccccc;
   font-size: 9pt;
 }
-.logo{
-  width:;
-}
+
 .update-date{
   font-size: 7px;
   color: #444444;
 }
+
 .search-bar{
-  width: 1230px;
+  width: 1130px;
+  height: 50px;
   background-color:white;
-  display: flex;
+  display: inline-block;
   border-radius: 7px;
   box-shadow: 0.1px 0.1px 7px 1px  rgba(118,118,118,0.2);
 }
+
 .search-bar>img{
   width: 50px;
   height: 50px;
-  align-content: center;
-  margin-left: 5px;
+  float: right;
 }
-.search-bar>input{
-  width: 1180px;
-  height: 50px;
-  border-color: transparent; 
-}
-body{
 
+.search-bar>input{
+  width: 1050px;
+  height: 50px;
+  background: none;
+  border: none;
 }
+
+.search-bar>input:focus{
+  outline: none;
+}
+.menu{
+  width: 150px;
+  height: 500px;
+  display: inline-block;
+  background: #ffffff;
+  float: left;
+  margin-right: 100px;
+}
+
+
 .App-header {
  justify-content: center;
   font-size: calc(10px + 2vmin);
 
 }
+
+
 .content-box{
   /* flex-direction: row; */
   display: flex;
-  
 }
 .App-header>h4{
   /* text-align: left; */
