--- a/server/frontend/src/App.css
+++ b/server/frontend/src/App.css
@@ -1,9 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700&display=swap');
 
+/* 페이지 전체 CSS */
 .App {
   font-family: 'Noto Sans KR', sans-serif;
   width: 1500px;
   margin: 20px auto 0;
+}
+
+
+
+
+/* 로고와 message부분 CSS */
+.App-header {
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  margin-bottom: 15px;
+ }
+
+ .App-header>h4{
+  color:#282828;
 }
 
 .App-title{
@@ -11,11 +26,10 @@
   font-size: 9pt;
 }
 
-.update-date{
-  font-size: 7px;
-  color: #444444;
-}
 
+
+
+/* 검색 CSS */
 .search-bar{
   width: 1130px;
   height: 50px;
@@ -26,9 +40,14 @@
 }
 
 .search-bar>img{
-  width: 50px;
-  height: 50px;
+  margin: 7.5px;
+  width: 35px;
+  height: 35px;
   float: right;
+  -moz-transform: scaleX(-1); 
+  -o-transform: scaleX(-1); 
+  -webkit-transform: scaleX(-1); 
+  transform: scaleX(-1);
 }
 
 .search-bar>input{
@@ -41,41 +60,38 @@
 .search-bar>input:focus{
   outline: none;
 }
+
+
+
+/* 메뉴 CSS */
 .menu{
+  top: 120px;
   width: 150px;
   height: 500px;
   display: inline-block;
   background: #ffffff;
   float: left;
   margin-right: 100px;
+  position: sticky;
 }
 
 
-.App-header {
- justify-content: center;
-  font-size: calc(10px + 2vmin);
-
-}
 
 
+/* 내용 CSS */
 .content-box{
   /* flex-direction: row; */
   display: flex;
 }
-.App-header>h4{
-  /* text-align: left; */
-  color:#282828;
-}
-.h6{
-  color: #444444;
-}
+
 .clearfix1,.clearfix2{
   color: black;
-  
 }
+
 .clearfix2{
   margin-left: 20px;
 }
+
 .clearfix1>.box{
   /* display: inline; */
   flex-direction: column;
@@ -86,9 +102,9 @@
   margin-bottom: 20px;
   box-shadow: 0.1px 0.1px 7px 1px  rgba(118,118,118,0.2);
 }
+
 .clearfix2>.box{
   flex-direction: column;
- 
   width: 700px;
   height: 332px;
   background-color: white;
@@ -96,12 +112,13 @@
   margin-bottom: 20px;
   box-shadow: 0.1px 0.1px 7px 1px  rgba(118,118,118,0.2);
 }
+
 .box{
   font-size: small;
   width: 500px;
   height: 400px;
-  
 }
+
 #chart1{
   width: 500px;
   height: 200px;
