--- a/server/frontend/src/App.css
+++ b/server/frontend/src/App.css
@@ -166,7 +166,12 @@
     /* display: flex; */
     
   }
-
+  .banner>img{
+    align-items: center;
+    width: 1100px;
+    height: 200px;
+    box-shadow: 0.1px 0.1px 7px 1px  rgba(118,118,118,0.2);
+  }
   .clearfix1,.clearfix2{
     color: black;
     display: inline-block;
