--- a/server/frontend/src/css/App.css
+++ b/server/frontend/src/css/App.css
@@ -234,6 +234,28 @@
     width: 150px;
     margin: 50px -150px;
   } */
+  .button{
+    background:none;
+  border:0;
+  outline:0;
+  cursor:pointer;
+  }
+  .tab_wrap {
+    display:flex;
+  }
+  .tab-menu-naver-btn,.tab-menu-daum-btn {
+    width:80px;
+    height:40px;
+    transition:0.3s all;
+  }
+  .tab-menu-naver-btn,.tab-menu-daum-btn.on{
+    border-bottom:2px solid #df0000;
+    font-weight:700;
+    color:#df0000;
+  } 
+  .tab-menu-naver-btn,.tab-menu-daum-btn:hover {
+    color:#df0000;
+  }
 }
 
 
